# Security-test-suite

Security-test-suite/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Security-test-suite/.github/workflows/: security-tests.yml
Security-test-suite/config/: settings.py
Security-test-suite/docs/: ADDING_TESTS.md  ARCHITECTURE.md  JUICE_SHOP_GUIDE.md  MANUAL_TESTING_GUIDE.md  OWASP_COVERAGE.md  SECURITY_MANUAL_CZ.md  TESTING_PROGRESS.md
Security-test-suite/tests/: conftest.py
Security-test-suite/tests/api/: test_authentication.py  test_cors.py  test_idor.py  test_rate_limiting.py  test_security_headers.py  test_sql_injection.py  test_xss.py
Security-test-suite/tests/ui/: conftest.py  test_clickjacking.py  test_dom_xss.py  test_login_security.py  test_sensitive_data_exposure.py
Security-test-suite/tests/ui/pages/: login_page.py  search_page.py
Security-test-suite/utils/: helpers.py  payloads.py  validators.py
