[project]
name = "security-test-suite"
version = "1.0.0"
description = "Automated security test suite for OWASP Juice Shop (OWASP Top 10)"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tests", "utils", "config"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",  # assert is fine in tests
    "S105",  # hardcoded passwords in test payloads are intentional
    "S106",  # same — test payloads
    "S107",  # same — test payloads
]

[tool.ruff.lint.per-file-ignores]
"utils/payloads.py" = ["S105", "S106"]
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
